Bug 254400 - action names appears with accelerator in a message
Summary: action names appears with accelerator in a message
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: 4.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-16 20:05 UTC by Alexander Potashev
Modified: 2010-11-30 19:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2010-10-16 20:05:27 UTC
Version:           4.5 (using KDE 4.5.0) 
OS:                Linux

In the following string the name of the action ("%3") appears with an accelerator:

messages/kdelibs/kdelibs4.po:12173(#2191)                                    
#: kdeui/widgets/kkeysequencewidget.cpp:166
#, kde-format
msgid "Shortcut '%1' in Application %2 for action %3\n"


Reproducible: Always
Comment 1 Christoph Feck 2010-11-30 19:53:12 UTC
SVN commit 1202403 by cfeck:

Strip accelerator from Action Friendly Name

BUG: 254400


 M  +2 -1      kglobalaccel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202403