Strip accelerator from Action Friendly Name

BUG: 254400

svn path=/trunk/KDE/kdelibs/; revision=1202403